--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.0",
     "element-ui": "^2.15.8",
     "qs": "^6.10.3",
     "vue": "^3.2.13",
