--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@vue/cli-plugin-router": "^5.0.4",
     "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "~5.0.0",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0"
   },
   "browserslist": [
     "> 1%",
