--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "@wangeditor/editor-for-vue": "^5.1.11",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.0",
