--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.10.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
+    "vue-clipboard2": "^0.3.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
